test/error/run.bat
..\..\bin\pascal.exe %* out.exe
